# flake8-logging-arg-count

./: README.md  logging_arg_count.py  pyproject.toml  tox.ini
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  run_tox.yml
tests/: test_logging_arg_count.py
