[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'flake8-logging-arg-count'
description = 'A flake8 plugin for detecting logging statements with mismatched argument counts'
version='0.1.0'
requires-python = '>=3.8'

[options]
py_modules = 'logging_arg_count'

[project.entry-points.'flake8.extension']
LAC = "logging_arg_count:LoggingArgCountChecker"
