[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'flake8-logging-arg-count'
description = 'A flake8 plugin for detecting logging statements with mismatched argument counts'
version='0.4.1'
requires-python = '>=3.9'
readme = {file = 'README.md', content-type = 'text/markdown'}
urls = {github='https://github.com/samety/flake8-logging-arg-count'}
keywords = [ 'flake8', 'flake8.plugin', 'flake8.extension' ] 
license = {text='Apache License Version 2.0'}
classifiers = [
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'License :: OSI Approved :: Apache Software License',
]

[options]
py_modules = 'logging_arg_count'

[project.entry-points.'flake8.extension']
LAC = 'logging_arg_count:LoggingArgCountChecker'
